fix discounts query bug and add user discont api
