# api/controllers/discount.go
@@ -11,6 +11,7 @@ import (
 	"github.com/esmailemami/eshop/db"
 	"github.com/esmailemami/eshop/models"
 	"github.com/google/uuid"
+	"gorm.io/gorm"
 )
 
 // GetDiscounts godoc
@@ -36,7 +37,8 @@ func GetDiscounts(ctx *app.HttpContext) error {
 		Joins("LEFT JOIN product_item pi2 ON pi2.id = d.product_item_id").
 		Joins(`INNER JOIN "user" cu ON cu.id = d.created_by_id`).
 		Joins(`LEFT JOIN "product" p ON p.id = pi2.product_id`).
-		Joins(`LEFT JOIN "user" ru ON ru.id = d.related_user_id`)
+		Joins(`LEFT JOIN "user" ru ON ru.id = d.related_user_id`).
+		Where("d.deleted_at IS NULL")
 
 	if productItemID, ok := ctx.GetParam("productItemId"); ok {
 		baseDB = baseDB.Where("pi2.id = ?", productItemID)
@@ -51,8 +53,12 @@ func GetDiscounts(ctx *app.HttpContext) error {
 	}
 
 	data, err := parameter.SelectColumns("d.id, d.created_at, d.updated_at, d.product_item_id, p.name as product_name, d.type, d.value, d.quantity, d.expires_in, d.code, d.created_by_id as creator_user_id, cu.username,d.related_user_id, ru.username as related_user_username").
-		SortDescending("d.created_at").
+		SortDescending("d.created_at", "d.expires_in").
 		SearchColumns("ru.username, ru.first_name, ru.last_name", "cu.username, cu.first_name, cu.last_name", "d.code", "p.name", "p.code").
+		EachItemProcess(func(db *gorm.DB, item *appmodels.DiscountAdminOutPutModel) error {
+			item.TypeName = item.Type.String()
+			return nil
+		}).
 		Execute(baseDB)
 
 	if err != nil {
@@ -241,4 +247,57 @@ func ValidateDiscountByCode(ctx *app.HttpContext) error {
 		Value:   &dbModel.Value,
 		Type:    &dbModel.Type,
 	}, http.StatusOK)
+}
+
+// Get User Discounts godoc
+// @Tags Discounts
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param page  query  string  false  "page size"
+// @Param limit  query  string  false  "length of records to show"
+// @Param searchTerm  query  string  false  "search for item"
+// @Success 200 {object} parameter.ListResponse[appmodels.DiscountUserOutPutModel]
+// @Failure 400 {object} map[string]any
+// @Failure 401 {object} map[string]any
+// @Router /user/discount [get]
+func GetUserDiscounts(ctx *app.HttpContext) error {
+	user, err := ctx.GetUser()
+	if err != nil {
+		return errors.NewUnauthorizedError(consts.UnauthorizedError, err)
+	}
+	baseDB := db.MustGormDBConn(ctx).Debug()
+	parameter := parameter.New[appmodels.DiscountUserOutPutModel](ctx, baseDB)
+
+	baseDB = baseDB.Table("discount d").
+		Joins(`INNER JOIN "user" ru ON ru.id = d.related_user_id`).
+		Where("d.deleted_at IS NULL AND ru.id = ?", *user.ID).
+		Where("(d.expires_in IS NOT NULL AND d.expires_in >= NOW()) AND (d.quantity IS NOT NULL AND d.quantity > 0)")
+
+	if productItemID, ok := ctx.GetParam("productItemId"); ok {
+		baseDB = baseDB.Where("pi2.id = ?", productItemID)
+	}
+
+	if relatedUserID, ok := ctx.GetParam("relatedUser"); ok {
+		baseDB = baseDB.Where("ru.id = ?", relatedUserID)
+	}
+
+	if creatorUserID, ok := ctx.GetParam("createdBy"); ok {
+		baseDB = baseDB.Where("cu.id = ?", creatorUserID)
+	}
+
+	data, err := parameter.SelectColumns("d.id, d.created_at, d.updated_at, d.type, d.value, d.quantity, d.expires_in, d.code").
+		SortDescending("d.created_at", "d.expires_in").
+		SearchColumns("d.code").
+		EachItemProcess(func(db *gorm.DB, item *appmodels.DiscountUserOutPutModel) error {
+			item.TypeName = item.Type.String()
+			return nil
+		}).
+		Execute(baseDB)
+
+	if err != nil {
+		return errors.NewInternalServerError(consts.InternalServerError, err)
+	}
+
+	return ctx.JSON(*data, http.StatusOK)
 }
